src/MidSL/gen/MidSLParser.java
// Generated from D:/antlr4/ShaderParser/src/MidSL\MidSL.g4 by ANTLR 4.5.1
package MidSL.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MidSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		VERSOIN_PROFILE=18, SMPBUFFER=19, TXBUFFER=20, STRUCT=21, CBUFFER=22, 
		INBUFFER=23, OUTBUFFER=24, INOUTBUFFER=25, IF=26, ELSE=27, QUESTION=28, 
		FOR=29, DO=30, WHILE=31, CONTINUE=32, BREAK=33, RETURN=34, SWITCH=35, 
		CASE=36, DEFUALT=37, LEFT_PAREN=38, RIGHT_PAREN=39, LEFT_BRACE=40, RIGHT_BRACE=41, 
		LEFT_BRACKET=42, RIGHT_BRACKET=43, DOT=44, COLON=45, SEMICOLON=46, COMMA=47, 
		SHARP=48, FUNC_KEYWORD=49, DECIMAL=50, OCTAL=51, HEX=52, FLOAT_NUM=53, 
		SCALA=54, VECTOR=55, MATRIX=56, INCREAMENT_OP=57, UNARY_OP=58, MULDIV_OP=59, 
		ADDDIV_OP=60, SHIFT_OP=61, COMPARE_OP=62, EQUAL_OP=63, BITWISE_OP=64, 
		LOGIC_OP=65, ASSIGNMENT_OP=66, ARITHMETIC_ASSIGNMENT_OP=67, IDENTIFIER=68, 
		COMMENT=69, WS=70, LINE_COMMENT=71;
	public static final int
		RULE_test = 0, RULE_prog = 1, RULE_preprocessor = 2, RULE_version_pre = 3, 
		RULE_type_qualifier = 4, RULE_storage_qualifier = 5, RULE_type_modifier = 6, 
		RULE_integer = 7, RULE_float_num = 8, RULE_bool_num = 9, RULE_type_specifier = 10, 
		RULE_type_specifier_nonarray = 11, RULE_array_specifier = 12, RULE_struct_specifier = 13, 
		RULE_basic_type = 14, RULE_void_type = 15, RULE_scala_type = 16, RULE_vector_type = 17, 
		RULE_matrix_type = 18, RULE_expression = 19, RULE_primary_expression = 20, 
		RULE_constant_expression = 21, RULE_left_value = 22, RULE_array_struct_selection = 23, 
		RULE_assignment_expression = 24, RULE_arithmetic_assignment_expression = 25, 
		RULE_function_definition = 26, RULE_function_declaration = 27, RULE_function_call = 28, 
		RULE_return_Type = 29, RULE_function_name = 30, RULE_func_decl_member = 31, 
		RULE_statement_list = 32, RULE_statement = 33, RULE_simple_statement = 34, 
		RULE_compoud_statement = 35, RULE_basic_statement = 36, RULE_declaration_statement = 37, 
		RULE_simple_declaration = 38, RULE_simple_declarator = 39, RULE_semantics = 40, 
		RULE_sample_declaration = 41, RULE_texture_declaration = 42, RULE_struct_declaration = 43, 
		RULE_cbuffer_declaration = 44, RULE_inbuffer_declaration = 45, RULE_outbuffer_declaration = 46, 
		RULE_inoutbuffer_declaration = 47, RULE_assignment_statement = 48, RULE_expression_statement = 49, 
		RULE_function_definition_statement = 50, RULE_selection_statement = 51, 
		RULE_selection_rest_statement = 52, RULE_switch_statement = 53, RULE_case_label = 54, 
		RULE_iteration_statement = 55, RULE_for_init_statement = 56, RULE_for_cond_statement = 57, 
		RULE_for_rest_statement = 58, RULE_jump_statement = 59;
	public static final String[] ruleNames = {
		"test", "prog", "preprocessor", "version_pre", "type_qualifier", "storage_qualifier", 
		"type_modifier", "integer", "float_num", "bool_num", "type_specifier", 
		"type_specifier_nonarray", "array_specifier", "struct_specifier", "basic_type", 
		"void_type", "scala_type", "vector_type", "matrix_type", "expression", 
		"primary_expression", "constant_expression", "left_value", "array_struct_selection", 
		"assignment_expression", "arithmetic_assignment_expression", "function_definition", 
		"function_declaration", "function_call", "return_Type", "function_name", 
		"func_decl_member", "statement_list", "statement", "simple_statement", 
		"compoud_statement", "basic_statement", "declaration_statement", "simple_declaration", 
		"simple_declarator", "semantics", "sample_declaration", "texture_declaration", 
		"struct_declaration", "cbuffer_declaration", "inbuffer_declaration", "outbuffer_declaration", 
		"inoutbuffer_declaration", "assignment_statement", "expression_statement", 
		"function_definition_statement", "selection_statement", "selection_rest_statement", 
		"switch_statement", "case_label", "iteration_statement", "for_init_statement", 
		"for_cond_statement", "for_rest_statement", "jump_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'version'", "'static'", "'uniform'", "'extern'", "'volatile'", 
		"'shared'", "'groupshared'", "'nointerpolation'", "'precise'", "'const'", 
		"'row_major'", "'column_major'", "'true'", "'false'", "'void'", "'_'", 
		"'|'", null, "'samplebuffer'", "'texturebuffer'", "'struct'", "'cbuffer'", 
		"'inbuffer'", "'outbuffer'", "'inoutbuffer'", "'if'", "'else'", "'?'", 
		"'for'", "'do'", "'while'", "'continue'", "'break'", "'return'", "'switch'", 
		"'case'", "'defualt'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", 
		"':'", "';'", "','", "'#'", "'dot'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "VERSOIN_PROFILE", "SMPBUFFER", "TXBUFFER", 
		"STRUCT", "CBUFFER", "INBUFFER", "OUTBUFFER", "INOUTBUFFER", "IF", "ELSE", 
		"QUESTION", "FOR", "DO", "WHILE", "CONTINUE", "BREAK", "RETURN", "SWITCH", 
		"CASE", "DEFUALT", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", "RIGHT_BRACE", 
		"LEFT_BRACKET", "RIGHT_BRACKET", "DOT", "COLON", "SEMICOLON", "COMMA", 
		"SHARP", "FUNC_KEYWORD", "DECIMAL", "OCTAL", "HEX", "FLOAT_NUM", "SCALA", 
		"VECTOR", "MATRIX", "INCREAMENT_OP", "UNARY_OP", "MULDIV_OP", "ADDDIV_OP", 
		"SHIFT_OP", "COMPARE_OP", "EQUAL_OP", "BITWISE_OP", "LOGIC_OP", "ASSIGNMENT_OP", 
		"ARITHMETIC_ASSIGNMENT_OP", "IDENTIFIER", "COMMENT", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MidSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MidSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TestContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MidSLParser.IDENTIFIER, 0); }
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterTest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitTest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitTest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_test);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public List<PreprocessorContext> preprocessor() {
			return getRuleContexts(PreprocessorContext.class);
		}
		public PreprocessorContext preprocessor(int i) {
			return getRuleContext(PreprocessorContext.class,i);
		}
		public List<Sample_declarationContext> sample_declaration() {
			return getRuleContexts(Sample_declarationContext.class);
		}
		public Sample_declarationContext sample_declaration(int i) {
			return getRuleContext(Sample_declarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(MidSLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(MidSLParser.SEMICOLON, i);
		}
		public List<Texture_declarationContext> texture_declaration() {
			return getRuleContexts(Texture_declarationContext.class);
		}
		public Texture_declarationContext texture_declaration(int i) {
			return getRuleContext(Texture_declarationContext.class,i);
		}
		public List<Struct_declarationContext> struct_declaration() {
			return getRuleContexts(Struct_declarationContext.class);
		}
		public Struct_declarationContext struct_declaration(int i) {
			return getRuleContext(Struct_declarationContext.class,i);
		}
		public Cbuffer_declarationContext cbuffer_declaration() {
			return getRuleContext(Cbuffer_declarationContext.class,0);
		}
		public Inbuffer_declarationContext inbuffer_declaration() {
			return getRuleContext(Inbuffer_declarationContext.class,0);
		}
		public Outbuffer_declarationContext outbuffer_declaration() {
			return getRuleContext(Outbuffer_declarationContext.class,0);
		}
		public Inoutbuffer_declarationContext inoutbuffer_declaration() {
			return getRuleContext(Inoutbuffer_declarationContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHARP) {
				{
				{
				setState(122);
				preprocessor();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SMPBUFFER) {
				{
				{
				setState(128);
				sample_declaration();
				setState(129);
				match(SEMICOLON);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TXBUFFER) {
				{
				{
				setState(136);
				texture_declaration();
				setState(137);
				match(SEMICOLON);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(144);
					struct_declaration();
					setState(145);
					match(SEMICOLON);
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(155);
			_la = _input.LA(1);
			if (_la==CBUFFER) {
				{
				setState(152);
				cbuffer_declaration();
				setState(153);
				match(SEMICOLON);
				}
			}

			setState(160);
			_la = _input.LA(1);
			if (_la==INBUFFER) {
				{
				setState(157);
				inbuffer_declaration();
				setState(158);
				match(SEMICOLON);
				}
			}

			setState(165);
			_la = _input.LA(1);
			if (_la==OUTBUFFER) {
				{
				setState(162);
				outbuffer_declaration();
				setState(163);
				match(SEMICOLON);
				}
			}

			setState(170);
			_la = _input.LA(1);
			if (_la==INOUTBUFFER) {
				{
				setState(167);
				inoutbuffer_declaration();
				setState(168);
				match(SEMICOLON);
				}
			}

			setState(172);
			statement_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreprocessorContext extends ParserRuleContext {
		public TerminalNode SHARP() { return getToken(MidSLParser.SHARP, 0); }
		public Version_preContext version_pre() {
			return getRuleContext(Version_preContext.class,0);
		}
		public PreprocessorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocessor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterPreprocessor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitPreprocessor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitPreprocessor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocessorContext preprocessor() throws RecognitionException {
		PreprocessorContext _localctx = new PreprocessorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_preprocessor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(SHARP);
			setState(175);
			version_pre();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Version_preContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode VERSOIN_PROFILE() { return getToken(MidSLParser.VERSOIN_PROFILE, 0); }
		public Version_preContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version_pre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterVersion_pre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitVersion_pre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitVersion_pre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Version_preContext version_pre() throws RecognitionException {
		Version_preContext _localctx = new Version_preContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_version_pre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(T__0);
			setState(178);
			integer();
			setState(180);
			_la = _input.LA(1);
			if (_la==VERSOIN_PROFILE) {
				{
				setState(179);
				match(VERSOIN_PROFILE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_qualifierContext extends ParserRuleContext {
		public List<Storage_qualifierContext> storage_qualifier() {
			return getRuleContexts(Storage_qualifierContext.class);
		}
		public Storage_qualifierContext storage_qualifier(int i) {
			return getRuleContext(Storage_qualifierContext.class,i);
		}
		public List<Type_modifierContext> type_modifier() {
			return getRuleContexts(Type_modifierContext.class);
		}
		public Type_modifierContext type_modifier(int i) {
			return getRuleContext(Type_modifierContext.class,i);
		}
		public Type_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterType_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitType_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitType_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_qualifierContext type_qualifier() throws RecognitionException {
		Type_qualifierContext _localctx = new Type_qualifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(184);
				switch (_input.LA(1)) {
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
				case T__8:
					{
					setState(182);
					storage_qualifier();
					}
					break;
				case T__9:
				case T__10:
				case T__11:
					{
					setState(183);
					type_modifier();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(186); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Storage_qualifierContext extends ParserRuleContext {
		public Storage_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_qualifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).enterStorage_qualifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MidSLListener ) ((MidSLListener)listener).exitStorage_qualifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MidSLVisitor ) return ((MidSLVisitor<? extends T>)visitor).visitStorage_qualifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Storage_qualifierContext storage_qualifier() throws RecognitionException {
		Storage_qualifierContext _localctx = new Storage_qualifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_storage_qualifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
